--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tipcalculaor_react",
+  "homepage": "https://sujit6060.github.io/TIPCALCULATOR_REACT",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,13 +8,16 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
+    "gh-pages": "^6.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
